--- a/appointments-app/src/app/pages/manager/manager.component.scss
+++ b/appointments-app/src/app/pages/manager/manager.component.scss
@@ -30,3 +30,14 @@ button {
     height: 40px;
     margin-left: 20px;
 }
+
+.error-box {
+    color: #b00020;
+    background: #f8d7da;
+    padding: 10px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    font-weight: bold;
+  }
