--- a/appointments-app/src/app/pages/user/user.component.html
+++ b/appointments-app/src/app/pages/user/user.component.html
@@ -2,7 +2,7 @@
     <h2>User Page</h2>
     <div *ngIf="errorMessage" class="error-box">
         {{ errorMessage }}
-      </div> 
+    </div> 
     <mat-form-field appearance="outline">
         <mat-label>Select User</mat-label>
         <mat-select [(ngModel)]="selectedUserId" (selectionChange)="onUserChange($event.value)">
@@ -30,6 +30,10 @@
             </mat-form-field>
         </div>
         <button mat-raised-button color="primary" class="save-button" (click)="saveAppointment()">Save Appointment</button>
+        <div *ngIf="errorMessage" class="error-box">
+            {{ errorMessage }}
+        </div> 
+        <p></p>
     </div>
     <mat-card class="appointments-table">
         <mat-card-title>User Appointments</mat-card-title>
@@ -50,7 +54,7 @@
                 <ng-container matColumnDef="actions">
                     <th mat-header-cell *matHeaderCellDef> Actions </th>
                     <td mat-cell *matCellDef="let appointment">
-                        <button mat-icon-button color="accent" (click)="openEditDialog(appointment)">
+                        <button mat-icon-button color="accent" (click)="openEditDialog(appointment)" [disabled]="appointment.status !== 0">
                             <mat-icon>edit</mat-icon>
                         </button>
                         <button mat-icon-button color="warn" (click)="deleteAppointment(appointment)" [disabled]="appointment.status !== 2">
